cmake_minimum_required(VERSION 3.7)
project(cc150)

set(CMAKE_CXX_STANDARD 11)

add_executable(001 001.cpp)
add_executable(002 002.cpp)
add_executable(003 003.cpp)
add_executable(004 004.cpp)
add_executable(005 005.cpp)
add_executable(006 006.cpp)
add_executable(007 007.cpp)
add_executable(008 008.cpp)

add_executable(150 150.cpp)