cmake_minimum_required(VERSION 3.7)
project(jzOffer)

set(CMAKE_CXX_STANDARD 11)

add_executable(01 01.cpp)
add_executable(02 02.cpp)
add_executable(03 03.cpp)
add_executable(04 04.cpp)
add_executable(05 05.cpp)
add_executable(06 06.cpp)
add_executable(07 07.cpp)
add_executable(08 08.cpp)
add_executable(09 09.cpp)
add_executable(10 10.cpp)
#add_executable(11 11.cpp)
#add_executable(12 12.cpp)
add_executable(13 13.cpp)
add_executable(14 14.cpp)
add_executable(15 15.cpp)
add_executable(16 16.cpp)
add_executable(17 17.cpp)
add_executable(18 18.cpp)
add_executable(19 19.cpp)
add_executable(20 20.cpp)
add_executable(21 21.cpp)
add_executable(22 22.cpp)
add_executable(23 23.cpp)
add_executable(24 24.cpp)
add_executable(25 25.cpp)
add_executable(26 26.cpp)
add_executable(27 27.cpp)
add_executable(28 28.cpp)
add_executable(29 29.cpp)
add_executable(30 30.cpp)
add_executable(31 31.cpp)
add_executable(32 32.cpp)
#add_executable(33 33.cpp)
add_executable(34 34.cpp)
add_executable(35 35.cpp)
add_executable(36 36.cpp)
add_executable(37 37.cpp)
add_executable(38 38.cpp)
add_executable(39 39.cpp)
add_executable(40 40.cpp)
add_executable(41 41.cpp)
add_executable(42 42.cpp)
add_executable(43 43.cpp)
add_executable(44 44.cpp)
add_executable(45 45.cpp)
add_executable(46 46.cpp)
add_executable(47 47.cpp)
add_executable(48 48.cpp)

# v2.0

add_executable(2_01 v2.0/01.cpp)
add_executable(2_02 v2.0/02.cpp)
add_executable(2_03 v2.0/03.cpp)
add_executable(2_04 v2.0/04.cpp)
add_executable(2_05 v2.0/05.cpp)
add_executable(2_06 v2.0/06.cpp)
add_executable(2_07 v2.0/07.cpp)
add_executable(2_08 v2.0/08.cpp)
add_executable(2_09 v2.0/09.cpp)
add_executable(2_10 v2.0/10.cpp)
add_executable(2_11 v2.0/11.cpp)
add_executable(2_12 v2.0/12.cpp)
add_executable(2_13 v2.0/13.cpp)
add_executable(2_14 v2.0/14.cpp)
add_executable(2_15 v2.0/15.cpp)
add_executable(2_16 v2.0/16.cpp)
add_executable(2_17 v2.0/17.cpp)
add_executable(2_18 v2.0/18.cpp)
add_executable(2_19 v2.0/19.cpp)
add_executable(2_20 v2.0/20.cpp)