cmake_minimum_required(VERSION 3.7)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(001 online/001.cpp)
add_executable(002 online/002.cpp)
add_executable(003 online/003.cpp)
add_executable(004 online/004.cpp)
add_executable(005 online/005.cpp)
add_executable(006 online/006.cpp)
add_executable(007 online/007.cpp)
add_executable(008 online/008.cpp)
add_executable(009 online/009.cpp)
add_executable(010 online/010.cpp)
add_executable(011 online/011.cpp)
add_executable(012 online/012.cpp)
add_executable(013 online/013.cpp)
add_executable(014 online/014.cpp)
add_executable(015 online/015.cpp)
add_executable(016 online/016.cpp)
add_executable(017 online/017.cpp)
add_executable(018 online/018.cpp)
add_executable(019 online/019.cpp)
add_executable(020 online/020.cpp)
add_executable(021 online/021.cpp)
add_executable(022 online/022.cpp)
add_executable(023 online/023.cpp)
add_executable(024 online/024.cpp)
add_executable(025 online/025.cpp)
add_executable(026 online/026.cpp)
add_executable(027 online/027.cpp)
add_executable(028 online/028.cpp)
add_executable(029 online/029.cpp)
add_executable(030 online/030.cpp)


add_executable(211 leetcode-cpp/211.cpp)
add_executable(212 leetcode-cpp/212.cpp)
add_executable(213 leetcode-cpp/213.cpp)
add_executable(214 leetcode-cpp/214.cpp)
add_executable(215 leetcode-cpp/215.cpp)
add_executable(216 leetcode-cpp/216.cpp)
add_executable(217 leetcode-cpp/217.cpp)
add_executable(218 leetcode-cpp/218.cpp)
add_executable(219 leetcode-cpp/219.cpp)
add_executable(2110 leetcode-cpp/2110.cpp)
add_executable(2111 leetcode-cpp/2111.cpp)
add_executable(2112 leetcode-cpp/2112.cpp)
add_executable(2113 leetcode-cpp/2113.cpp)
add_executable(2114 leetcode-cpp/2114.cpp)
add_executable(2115 leetcode-cpp/2115.cpp)
add_executable(2116 leetcode-cpp/2116.cpp)


add_executable(1515 leetcode-cpp/1515.cpp)


