cmake_minimum_required(VERSION 3.7)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(001 online/001.cpp)
add_executable(002 online/002.cpp)
add_executable(003 online/003.cpp)
add_executable(004 online/004.cpp)
add_executable(005 online/005.cpp)
add_executable(006 online/006.cpp)
add_executable(007 online/007.cpp)
add_executable(008 online/008.cpp)
add_executable(009 online/009.cpp)
add_executable(010 online/010.cpp)
add_executable(011 online/011.cpp)
add_executable(012 online/012.cpp)
add_executable(013 online/013.cpp)
add_executable(014 online/014.cpp)
add_executable(015 online/015.cpp)
add_executable(016 online/016.cpp)
add_executable(017 online/017.cpp)
add_executable(018 online/018.cpp)
add_executable(019 online/019.cpp)
add_executable(020 online/020.cpp)
add_executable(021 online/021.cpp)
add_executable(022 online/022.cpp)
add_executable(023 online/023.cpp)
add_executable(024 online/024.cpp)
add_executable(025 online/025.cpp)
add_executable(026 online/026.cpp)
add_executable(027 online/027.cpp)
add_executable(028 online/028.cpp)
add_executable(029 online/029.cpp)
add_executable(030 online/030.cpp)
add_executable(031 online/031.cpp)
add_executable(032 online/032.cpp)
add_executable(033 online/033.cpp)
add_executable(034 online/034.cpp)
add_executable(035 online/035.cpp)
add_executable(036 online/036.cpp)
add_executable(037 online/037.cpp)
add_executable(038 online/038.cpp)
add_executable(039 online/039.cpp)
add_executable(040 online/040.cpp)
add_executable(041 online/041.cpp)
add_executable(042 online/042.cpp)
add_executable(043 online/043.cpp)
add_executable(044 online/044.cpp)
add_executable(045 online/045.cpp)
add_executable(046 online/046.cpp)
add_executable(047 online/047.cpp)
add_executable(048 online/048.cpp)
add_executable(049 online/049.cpp)
add_executable(050 online/050.cpp)
add_executable(051 online/051.cpp)
add_executable(052 online/052.cpp)
add_executable(053 online/053.cpp)
add_executable(054 online/054.cpp)
add_executable(055 online/055.cpp)
add_executable(056 online/056.cpp)
add_executable(057 online/057.cpp)
add_executable(058 online/058.cpp)
add_executable(059 online/059.cpp)
add_executable(060 online/060.cpp)

add_executable(2_1_1 leetcode-cpp/2_1_1.cpp)
add_executable(2_1_2 leetcode-cpp/2_1_2.cpp)
add_executable(2_1_3 leetcode-cpp/2_1_3.cpp)
add_executable(2_1_4 leetcode-cpp/2_1_4.cpp)
add_executable(2_1_5 leetcode-cpp/2_1_5.cpp)
add_executable(2_1_6 leetcode-cpp/2_1_6.cpp)
add_executable(2_1_7 leetcode-cpp/2_1_7.cpp)
add_executable(2_1_8 leetcode-cpp/2_1_8.cpp)
add_executable(2_1_9 leetcode-cpp/2_1_9.cpp)
add_executable(2_1_10 leetcode-cpp/2_1_10.cpp)